Fix combobox list z-index
Especially when inside a modal.

--- a/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
@@ -18,10 +18,11 @@
 
   &.euiComboBoxOptionsList--bottom { /* 4 */
     @include euiBottomShadowMedium;
-    z-index: $euiZComboBox + 2;  // Ensures the dropdown's is above the combo box's shadow
   }
   &.euiComboBoxOptionsList--top { /* 4 */
-    @include euiBottomShadowFlat;
+    box-shadow:
+      0 -2px 4px -1px rgba($euiShadowColor, .2),
+      0 0px 2px 0 rgba($euiShadowColor, .2);
   }
 }
 
